--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,84 @@
 .App {
-  text-align: center;
+  display: flex;
+  height: 100vh;
+  flex-direction: column;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+/* .menu-bar {
+  display: flex;
+  min-height: 10%;
+  width: 100%;
+  background: green;
+} */
+
+.chat-container-header {
+  display: flex;
+  direction: row;
+  max-height: 10%;
+  width: auto;
+  flex-grow: 1;
+  background-color: green;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.chat-container-content {
+  display: flex;
+  height: auto;
+  flex-grow: 1;
+  background-color: blue;
 }
 
-.App-title {
-  font-size: 1.5em;
+.chat-container {
+  display: flex;
+  flex-direction: column;
+  width: auto;
+  flex-grow: 1;
 }
 
-.App-intro {
-  font-size: large;
+.chat-root {
+  display: flex;
+  flex-direction: row;
+  background-color: blue;
+  height: 100%;
+  width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.chat-sidebar {
+  display: flex;
+  flex-direction: row;
+  width: 25%;
+  background-color: red;
+  height: 100%;
+}
+
+
+.chat-sidebar-header {
+  display: flex;
+  direction: row;
+  max-height: 10%;
+  width: auto;
+  flex-grow: 1;
+  background-color: green;
+}
+
+
+.chat-list-button {
+  background-color: yellow;
+  height: 20%;
+  position: relative;
+  top: 50%;
+  bottom: 50%;
+  border-style: solid;
+  border-width: 1px;
+}
+
+
+@media (max-width: 640px) {
+  .chat-sidebar {
+    width:0%;
+  }
+
+  .chat-sidebar[sidebar-open='true'] {
+    width: 25%;
+  }
+
 }
