--- a/src/App.css
+++ b/src/App.css
@@ -57,13 +57,14 @@
   max-height: 10%;
   width: auto;
   flex-grow: 1;
-  background-color: green;
+  background-color: yellow;
 }
 
 
 .chat-list-button {
   background-color: yellow;
   height: 20%;
+  visibility: collapse;
   position: relative;
   top: 50%;
   bottom: 50%;
@@ -75,10 +76,16 @@
 @media (max-width: 640px) {
   .chat-sidebar {
     width:0%;
+    transition: 0.5s;
   }
 
   .chat-sidebar[sidebar-open='true'] {
     width: 25%;
+    transition: 0.5s;
+  }
+
+  .chat-list-button {
+    visibility: visible;
   }
 
 }
