--- a/src/components/ChatContainer/index.css
+++ b/src/components/ChatContainer/index.css
@@ -1,17 +1,22 @@
 .chat-container-header {
   display: flex;
-  direction: row;
-  max-height: 10%;
+  flex-direction: row;
   width: auto;
   flex-grow: 1;
-  background-color: green;
+  border-bottom: 1px solid #e0e0e0;
+  z-index: 1;
+  flex: none;
+  align-items: center;
+  padding: 0.62rem;
+  height: 5.5rem;
+  box-shadow: 0 0 0.62rem rgba(0, 0, 0, 0.1);
 }
 
 .chat-container-content {
   display: flex;
   height: auto;
   flex-grow: 1;
-  background-color: blue;
+  border: 1px solid #e0e0e0;
 }
 
 .chat-container {
